--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@inertiajs/vue3": "^2.0.0",
         "bootstrap-icons": "^1.11.3",
+        "dayjs": "^1.11.13",
         "lodash": "^4.17.21"
     }
 }
