--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "bootstrap-icons": "^1.11.3",
         "dayjs": "^1.11.13",
         "lodash": "^4.17.21",
-        "maplibre-gl": "^5.0.1"
+        "maplibre-gl": "^5.0.1",
+        "swiper": "^11.2.1"
     }
 }
