todo fix the jobcard because every jobs update it

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "dayjs": "^1.11.13",
         "lodash": "^4.17.21",
         "maplibre-gl": "^5.0.1",
+        "nanoid": "^5.0.9",
         "swiper": "^11.2.1"
     }
 }
