--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "spatie/browsershot": "^5.0",
+        "spatie/laravel-pdf": "^1.5",
         "tightenco/ziggy": "^2.4",
         "xendit/xendit-php": "^6.1"
     },
