--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
         "maplibre-gl": "^5.0.1",
         "nanoid": "^5.0.9",
         "puppeteer": "^24.2.0",
-        "swiper": "^11.2.1"
+        "swiper": "^11.2.1",
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "@fortawesome/vue-fontawesome": "^3.0.8",
+        "chart.js": "^4.4.7"
     }
 }
