--- a/package.json
+++ b/package.json
@@ -18,19 +18,20 @@
         "vite": "^6.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-brands-svg-icons": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "@fortawesome/vue-fontawesome": "^3.0.8",
         "@indoorequal/vue-maplibre-gl": "^8.2.2",
         "@inertiajs/vue3": "^2.0.0",
         "@stadiamaps/maplibre-search-box": "^2.0.0",
         "bootstrap-icons": "^1.11.3",
+        "chart.js": "^4.4.7",
         "dayjs": "^1.11.13",
         "lodash": "^4.17.21",
         "maplibre-gl": "^5.0.1",
         "nanoid": "^5.0.9",
         "puppeteer": "^24.2.0",
-        "swiper": "^11.2.1",
-        "@fortawesome/fontawesome-svg-core": "^6.7.2",
-        "@fortawesome/free-solid-svg-icons": "^6.7.2",
-        "@fortawesome/vue-fontawesome": "^3.0.8",
-        "chart.js": "^4.4.7"
+        "swiper": "^11.2.1"
     }
 }
