--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@fortawesome/free-brands-svg-icons": "^6.7.2",
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/vue-fontawesome": "^3.0.8",
+        "@heroicons/vue": "^2.2.0",
         "@indoorequal/vue-maplibre-gl": "^8.2.2",
         "@inertiajs/vue3": "^2.0.0",
         "@stadiamaps/maplibre-search-box": "^2.0.0",
@@ -32,6 +33,7 @@
         "maplibre-gl": "^5.0.1",
         "nanoid": "^5.0.9",
         "puppeteer": "^24.2.0",
-        "swiper": "^11.2.1"
+        "swiper": "^11.2.1",
+        "vue3-easy-data-table": "^1.5.47"
     }
 }
