--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "laravel-echo": "^2.0.2",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.49",
         "prettier": "^3.4.2",
         "prettier-plugin-tailwindcss": "^0.6.9",
+        "pusher-js": "^8.4.0",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0"
     },
