--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
         "@indoorequal/vue-maplibre-gl": "^8.2.2",
         "@inertiajs/vue3": "^2.0.0",
         "@stadiamaps/maplibre-search-box": "^2.0.0",
+        "apexcharts": "^4.5.0",
         "bootstrap-icons": "^1.11.3",
         "chart.js": "^4.4.7",
         "dayjs": "^1.11.13",
+        "echarts": "^5.6.0",
         "lodash": "^4.17.21",
         "maplibre-gl": "^5.0.1",
         "nanoid": "^5.0.9",
         "puppeteer": "^24.2.0",
         "swiper": "^11.2.1",
+        "vue-echarts": "^7.0.3",
+        "vue3-apexcharts": "^1.8.0",
         "vue3-easy-data-table": "^1.5.47"
     }
 }
