--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "pusher/pusher-php-server": "^7.2",
         "spatie/browsershot": "^5.0",
         "spatie/laravel-pdf": "^1.5",
+        "stevebauman/location": "^7.6",
         "tightenco/ziggy": "^2.4",
         "xendit/xendit-php": "^6.1"
     },
