--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "maplibre-gl": "^5.0.1",
         "nanoid": "^5.0.9",
         "puppeteer": "^24.2.0",
+        "qs-esm": "^7.0.2",
         "swiper": "^11.2.1",
         "vue-chart-3": "^3.1.8",
         "vue-echarts": "^7.0.3",
