--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,19 +5,19 @@ nodaemon=true
 command=php artisan serve --host=0.0.0.0 --port=%(ENV_PORT)s
 autostart=true
 autorestart=true
-stdout_logfile=/var/www/storage/logs/serve.log
-stderr_logfile=/var/www/storage/logs/serve_error.log
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
 
 [program:php-artisan-queue]
 command=php artisan queue:work --sleep=3 --tries=3
 autostart=true
 autorestart=true
-stdout_logfile=/var/www/storage/logs/queue.log
-stderr_logfile=/var/www/storage/logs/queue_error.log
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
 
 [program:php-artisan-schedule]
 command=php artisan schedule:work
 autostart=true
 autorestart=true
-stdout_logfile=/var/www/storage/logs/schedule.log
-stderr_logfile=/var/www/storage/logs/schedule_error.log
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
