disable log rotation

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,7 +6,9 @@ command=php artisan serve --host=0.0.0.0 --port=%(ENV_PORT)s
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stderr_logfile=/dev/
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
 
 [program:php-artisan-queue]
 command=php artisan queue:work --sleep=3 --tries=3
@@ -14,6 +16,8 @@ autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
 
 [program:php-artisan-schedule]
 command=php artisan schedule:work
@@ -21,3 +25,5 @@ autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
