--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,7 +6,7 @@ command=php artisan serve --host=0.0.0.0 --port=%(ENV_PORT)s
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
-stderr_logfile=/dev/
+stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 
