--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,4 @@ services:
   - type: web
     name: iCan-Careers
     env: docker
-    deploy:
-      command: php artisan migrate:fresh --force && php artisan db:seed --class=RolesSeeder
+    preDeployCommand: php artisan migrate:fresh --force && php artisan db:seed --class=RolesSeeder
