--- a/supervisord.conf
+++ b/supervisord.conf
@@ -11,7 +11,7 @@ stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 
 [program:php-artisan-queue]
-command=php artisan queue:work --sleep=3 --tries=3
+command=php artisan queue:work --sleep=3 --tries=3 --verbose --timeout=90 --max-time=3600
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
